--- a/style.css
+++ b/style.css
@@ -293,3 +293,55 @@
     height: 500px;
     width: 500px;
 }
+
+
+
+/* < !-- -------------------third chapter highlight-------------- --> */
+
+.full-body-highlight {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 165px;
+}
+
+
+/* leftside */
+
+
+
+.highlight-text {
+    width: 500px;
+    height: 309px;
+
+
+}
+
+.highlight-text h1 {
+
+    color: #0A0826;
+
+    font-family: sans-serif;
+    font-size: 46px;
+
+    font-weight: 790;
+}
+
+.highlight-text p {
+    color: #6C6C6C;
+
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+
+
+}
+
+/* --------------------right side img------------------------------------------------ */
+.right-highlight-pic img {
+    width: 567px;
+    height: 427px;
+
+
+}
