--- a/style.css
+++ b/style.css
@@ -566,7 +566,7 @@ button:hover{
 
 
 /* finishing text */
-.text {
+.finish {
     display: flex;
     justify-content: center;
     margin-top: 16px;
